[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [
    {name = "Mischan Toosarani-Hausberger", email = "mischan@abovevacant.com"},
]
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "typer==0.25.1",
    "sentry-sdk==2.60.0",
    "google-cloud-storage==3.10.1",
    "pydantic==2.13.4",
    "deepdiff==9.0.0",
    "textual==8.2.6",
]
name = "symx"
version = "0.2.0"
description = "Symbol collection for apple platforms."
readme = "README.md"

[project.scripts]
symx = "symx.__main__:main"

[dependency-groups]
dev = [
    "pyright==1.1.409",
    "ruff==0.15.12",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
